--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ MarkupSafe==1.1.0
 numpy==1.16.0
 protobuf==3.6.1
 python-chess==0.25.0
-PyYAML==3.13
+pyyaml>=4.2b1
 scipy==1.2.0
 six==1.12.0
 tensorboard==1.12.2
